<resources>
    <string name="app_name">BookAdres</string>
    <string name="textStart">Сохранить Данные Персоны</string>
    <string name="edit_text_name">Введите Имя</string>
    <string name="edit_text_family">Введите Фамилию</string>
    <string name="edit_text_adres">Введите Адрес</string>
    <string name="edit_text_phone">Введите Телефон</string>
    <string name="button_save">Сохранить данные Персоны</string>
    <string name="text_view_name">Имя Персоны</string>
    <string name="text_view_family">Фамилия</string>
    <string name="text_view_adres">Адрес</string>
    <string name="text_view_phone">Телефон</string>
    <string name="text_view_title">Подробная информация профиля</string>
    <string name="button_back">На главную страницу</string>
    <string name="infoStr">Информация о приложении</string>
    <string name="exit">Выход из приложения</string>
</resources>